[package]
name = "core"
version = "0.1.0"
authors = ["kangchengzhao <82069528+kangchengzhao@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.126",  features = ["derive"] }

utils = {path = "../utils"}