[package]
name = "hello_world_derive"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"
[lib]
proc-macro=true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn="1.0.48"
quote="1.0.7"